--- a/style/controlpanel.css
+++ b/style/controlpanel.css
@@ -359,3 +359,18 @@ div#videofeed
     height: 5.2%;
 
 }
+
+#googleMap
+{
+    height: 100%;
+    width: 25%;
+    margin: 2%;
+    
+    background: none;
+    z-index: -1;
+    position: absolute;
+    left: 30%;
+    border-radius: 1vmin;
+    
+
+}
